Aligned , just a correction

--- a/style.css
+++ b/style.css
@@ -8,22 +8,17 @@
 } */
 #form{
     text-align: center;
-    display: flex;
-    padding-top:100px;
+    padding-top:10px;
     margin: auto;
     width: 75%;
-    align-content: center;
+    display: flexbox;
     justify-content: center;
 }
 #keys-div{
     width: 100%;
-    /* padding: 100px; */
-    padding-left: 90px;
-    /* display: flex; */
-    /* justify-self: center; */
-    /* align-items: center; */
-    margin-left: auto;
-    margin-right: auto;
+    /* padding: 90px; */
+    margin: auto;
+    display: flex;
 }
 #footer{
     text-align: end;
